# metrust-py

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  VERIFICATION.md  mkdocs.yml  pyproject.toml  tmp_bunkers.txt  tmp_isen.txt  tmp_wca.txt
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: bench_hrrr.py  bench_hrrr_vs_metpy.py  bench_python.py  bench_workflows.py
crates/metrust/: Cargo.toml
crates/metrust/benches/: calc_bench.rs
crates/metrust/src/: constants.rs  projections.rs  units.rs
crates/metrust/src/calc/: atmo.rs  kinematics.rs  mod.rs  severe.rs  smooth.rs  thermo.rs  utils.rs  wind.rs
crates/metrust/src/interpolate/: mod.rs
crates/metrust/src/io/: gempak.rs  gempak_dm.rs  gempak_sounding.rs  gempak_surface.rs  gini.rs  level3.rs  metar.rs  mod.rs  station.rs  wpc.rs
crates/metrust/src/plots/: mod.rs
crates/metrust/tests/: test_gempak.rs  test_new_functions.rs
crates/rustmet-core/: Cargo.toml
crates/wx-core/: Cargo.toml
crates/wx-core/src/: lib.rs  projection.rs
crates/wx-core/src/download/: catalog.rs  client.rs
crates/wx-core/src/grib2/: unpack.rs  writer.rs
crates/wx-core/src/render/: ansi.rs  mod.rs
crates/wx-field/: Cargo.toml
crates/wx-field/src/: projection.rs
crates/wx-math/: Cargo.toml
crates/wx-math/src/: composite.rs  dynamics.rs  gridmath.rs  interpolate.rs  lib.rs  thermo.rs
crates/wx-radar/: Cargo.toml
demos/: hrrr_diffusion_training.md
docs/: compatibility.md  delegation-ledger.md  index.md  performance.md  workflow-benchmarks.md
docs/api/: atmospheric.md  grid-composites.md  io.md  kinematics.md  moisture.md  severe.md  smoothing.md  thermodynamics.md  units.md  wind.md
docs/guides/: arrays.md  installation.md  migration.md
docs/methodology/: architecture.md  grid-kinematics.md  index.md  interpolation.md  io-formats.md  metpy-compatibility.md  moisture.md  parallelism.md  severe-weather.md  smoothing.md  thermodynamics.md  units-and-pint.md  wind.md
docs/tutorials/: first-grid.md  first-sounding.md  reading-the-numbers.md  recipes.md  weather-101.md
examples/: cookbook_500hpa_grid.py  cookbook_sounding.py  sounderpy_dropin.py
python/metrust/: __init__.py  units.py  xarray.py
python/metrust/calc/: __init__.py
python/metrust/constants/: __init__.py
python/metrust/interpolate/: __init__.py
python/metrust/io/: __init__.py
python/metrust/plots/: __init__.py
src/: lib.rs  py_atmo.rs  py_constants.rs  py_interpolate.rs  py_io.rs  py_kinematics.rs  py_severe.rs  py_smooth.rs  py_thermo.rs  py_utils.rs  py_wind.rs
tests/: api_audit_calc.md  api_audit_other.md  benchmark.py  benchmark_gpu.py  run_ci_mode.py  sounding_3way.py  test_cookbook_replays.py  test_delegation_ledger.py  test_gpu_backend.py  test_metpy_dropin_compat.py  test_python_compat.py  test_runtime_parity.py  test_runtime_parity_interp_dataset.py  test_runtime_parity_kinematics_extra.py  test_runtime_parity_remaining.py  test_runtime_parity_sounding_core.py  test_runtime_parity_thermo_layers.py  test_runtime_parity_utils_misc.py  test_runtime_parity_wind_profiles.py  test_signature_parity.py  verify_constants.py  verify_edge_cases.py  verify_kinematics.py  verify_severe_atmo.py  verify_smooth_interp.py  verify_thermo.py  verify_units.py  verify_wind.py
tests/benchmarks/: bench_01_hrrr_severe.py  bench_02_gfs_upper_air.py  bench_03_rap_warm_front.py  bench_04_nam_winter.py  bench_05_hrrr_supercell.py  bench_06_gfs_jet.py  bench_07_hrrr_fire.py  bench_08_era5_tropical.py  bench_09_rap_aviation.py  bench_10_hrrr_squall.py  bench_11_gfs_cold_air.py  bench_12_hrrr_pbl.py
