[package]
name = "metrust-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for metrust — a drop-in replacement for MetPy"

[lib]
name = "_metrust"
crate-type = ["cdylib"]

[dependencies]
metrust = { path = "../metrust" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
