[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[package]
name = "metrust-py"
version = "0.1.8"
edition.workspace = true
description = "Python bindings for metrust — a drop-in replacement for MetPy"

[lib]
name = "_metrust"
crate-type = ["cdylib"]

[dependencies]
metrust = { path = "crates/metrust" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
