[package]
name = "metrust"
version = "0.3.9"
edition = "2021"
description = "A pure-Rust drop-in replacement for MetPy — meteorological calculations, data I/O, and visualization"
license = "MIT"

[dependencies]
# Core dependencies
wx-core = { path = "../wx-core" }
wx-math = { path = "../wx-math" }
wx-field = { path = "../wx-field" }
wx-radar = { path = "../wx-radar" }

# Minimal external deps
chrono = "0.4"
rayon = "1"
flate2 = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "calc_bench"
harness = false
