[package]
name = "metrust"
version = "0.3.10"
edition = "2021"
description = "A pure-Rust meteorology toolkit with a MetPy-compatible calculation layer"
license = "MIT"

[dependencies]
# Core dependencies
wx-core = { path = "../wx-core" }
wx-math = { path = "../wx-math" }
wx-field = { path = "../wx-field" }
wx-radar = { path = "../wx-radar" }
ecape-rs = { git = "https://github.com/FahrenheitResearch/ecape-rs", rev = "ce739db733dfb12464761935243418e0a155124b" }

# Minimal external deps
chrono = "0.4"
rayon = "1"
flate2 = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "calc_bench"
harness = false
